Added route for getting a spatial placement for a rui location and a given target space
