# projects/ccf-api/src/lib/routes/v1/index.ts
@@ -2,6 +2,7 @@ import { Router } from 'express';
 
 import { cacheResponses } from '../../middleware/response-cache';
 import { getDatabaseStatus } from './database-status';
+import { getSpatialPlacement } from './get-spatial-placement';
 import { routes as gtexRoutes } from './gtex';
 import { routes as hubmapRoutes } from './hubmap';
 import { getReferenceOrganSceneHandler } from './reference-organ-scene';
@@ -11,6 +12,7 @@ import { useCachedResult } from './utils/use-cached-result';
 
 export const routes = Router()
   .use('/db-status', getDatabaseStatus())
+  .post('/get-spatial-placement', getSpatialPlacement())
   .use(cacheResponses())
   .use('/hubmap', hubmapRoutes)
   .use('/gtex', gtexRoutes)
